commit 3e5a357194016095c701e1198bb545ca68b84c87
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Thu Aug 5 22:41:26 2010 +0900

    aufs stdalone: set all configs to a make variable
    
    This var is used to verify configs by another separated makefile, and
    mainly for myself.
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 5675361e2aaf8c49e95f9cdc4804c18add26a2c1
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Sun Aug 1 12:52:57 2010 +0900

    aufs: tiny, note about the vdir cache
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 6c34a3c246941b965f14a1638c11683c202b72d2
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Sun Aug 1 12:27:40 2010 +0900

    aufs: more verbose at deleting a branch
    
    In deleting a branch, aufs searches the files in-use on that branch. If
    any of them are found, aufs rejects deleting immediately due to the
    branch is busy. It is basically equivalent to unmounting.
    But users may want to know the path of the opened file.
    This commit stops aufs to abondon the deleting process in verbose mode
    when it finds that there are file(s) opened on that branch. After
    printing the paths, aufs returns the error as usual. While the result is
    unchanged, aufs has to do for some unnecessary works just to show the
    paths.
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 94a88523d6f702e67a74dfbdc5917b6aea7ceb36
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Wed Jul 21 11:32:24 2010 +0900

    aufs: allow a loopback-mounted branch
    
    It is rejected to add a branch which is a loopback-mount in another
    branch. For example,
    - /au = /br0 + /br1 ... + /brN
    - /brX/fs.img exists
    loopback mount /brX/fs.img at /out/dirB,
    append:/out/dirB
    
    This commit allows such case.
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 4946ca0d7c61d3875ec7c633100843f9249b1a2c